fixing align issue for landscape mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html{
 }
 body{
   height: 100%;
-  background: #505050;
+  background: #303030;
   padding:0px;
   margin: 0px;
 }
@@ -94,13 +94,24 @@ table tr:nth-child(odd) td:nth-child(even) {
   width:auto;
   margin-left:-5px;
 }
+.capturedWhiteDiv{
+    height: 30px;
+    text-align: center;
+    padding-top: 5px
+  }
+  .capturedBlackDiv{
+      height: 30px;
+      text-align: center;
+      padding-top: 5px
+    }
+
 @media all and (max-device-width: 667px) and (orientation: portrait){
 
   table{
     border-collapse: collapse;
   }
   .board{
-    padding-top: 20px;
+    padding-top: 10px;
 
   }
   table.table td{
@@ -122,6 +133,31 @@ table tr:nth-child(odd) td:nth-child(even) {
     width: calc(95vh/8);
     height: calc(95vh/8);
     text-align: center;
-
   }
+  .capturedWhiteDiv{
+      height: 30px;
+      text-align: left;
+      display:flex;
+      flex-direction: column;
+      position: absolute;
+      top:10px;
+      left:5px;
+      width:140px;
+    }
+    .capturedBlackDiv{
+        display:flex;
+        flex-direction: column;
+        text-align: left;
+        width: 140px;
+        height: 30px;
+        position: absolute;
+        bottom:60px;
+        left:10px;
+      }
+
+      .captured{
+        height:30px;
+        width:auto;
+        margin-left:-5px;
+      }
 }
